# mizui

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  decl.h  magic.h
src/app/: CMakeLists.txt  mizui.cpp  program.cpp
src/common/: decl.h  magic.h  modifiers.h
src/conf/: yaml.cpp  yaml.h
src/config/: global.cpp  global.h  yaml.cpp  yaml.h
src/core/: application.cpp  application.h  assets_manager.h  games_paths.cpp
src/crypt/: aes_decrypt.cpp  aes_decrypt.h  platform_keys.cpp  platform_keys.h
src/exe/: executable.h  nca.cpp  nca.h  nso.cpp  nso.h  nsp.cpp  nsp.h  nsp_partition.cpp  nsp_partition.h
src/hle/: application.h  virtual_nx.cpp  virtual_nx.h
src/mizui/: CMakeLists.txt  decl.h
src/mizui/cfg/: global.cpp  global.h  yaml.cpp  yaml.h
src/mizui/conf/: global.cpp  global.h
src/mizui/core/: application.cpp  application.h  assets_manager.cpp  assets_manager.h  games_paths.cpp  games_paths.h
src/mizui/exe/: executable.cpp  executable.h  rofs.cpp  rofs.h
src/mizui/exe/nso/: nso.cpp  nso.h
src/mizui/exe/nsp/: nsp.cpp  nsp.h
src/mizui/hle/: application.h  executable.h  virtual_nx.cpp  virtual_nx.h
src/mizui/orizonti/: CMakeLists.txt
src/mizui/orizonti/kernel/: process.h
src/mizui/vfs/: mappable.cpp  mappable.h
src/orizonti/: CMakeLists.txt  os.cpp  os.h
src/orizonti/es/: title_ticket.cpp  title_ticket.h
src/orizonti/fs/: packaged_meta.cpp  packaged_meta.h  partition_filesystem.cpp  partition_filesystem.h
src/vfs/: mappable.cpp  mappable.h  nca.cpp  nca.h  path.h  ranged.h  rofs.cpp  rofs.h  support.h
